# shift_auth_service

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose-dev.yml  docker-compose-test.yaml  docker-compose.yaml  dockerfile_test  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: .p10k.zsh  post-start.sh
.github/workflows/: main.yaml  pre-commit.yaml
auth-service-chart/: values.yaml
auth-service-chart/templates/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
helm/auth-service-chart/: values.yaml
helm/auth-service-chart/templates/: deployment.yaml  pvc.yaml  service.yaml
kuber/: configmap.yaml  deployment.yaml  pod.yaml  pvc.yaml  secret.yaml  service.yaml
src/app/: config.py  constants.py  main.py  metrics.py  service.py  tracer.py
src/app/api/: __init__.py  endpoints.py  schemas.py  schemes.py
src/app/db/: __init__.py  database.py  models.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 2babeb13b6f7_token_table_deleted.py  d4e9afae12f7_initial_migration.py  e0ff80a023f3_fix.py
src/app/service/: __init__.py  exceptions.py  producer.py  service.py
src/config/: config.py  config.yaml
src/tests/: conftest.py  test_logic.py
src/tests/integration/: conftest.py  test_api.py
src/tests/unit/service/: conftest.py  test_service.py
