[tool.poetry]
name = "src"
version = "0.6.0"
description = ""
authors = ["Vasilii Stakrotckii <inferno681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.1"
aiokafka = "^0.11.0"
brotli = "^1.1.0"
aiofiles = "^24.1.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-instrumentation-requests = "^0.48b0"
prometheus-client = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
wemake-python-styleguide = "^0.19.2"
types-pyyaml = "^6.0.12.20240724"
asgi-lifespan = "^2.1.0"
types-aiofiles = "^24.1.0.20240626"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
types-sqlalchemy-utils = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
